# rover

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  rover.html
.github/workflows/: ci.yml  pages.yml  pypi-publish.yml  rover-pypi-publish.yml
landing/: index.html
rover/: pyproject.toml
rover/rover/: __main__.py  altergo_launcher.py  api.py  app.py  config.py  menu.py  sessions_index.py  telemetry.py
rover/rover/screens/: activity.py  dashboard.py  detail.py  recall.py  settings.py
rover/tests/: conftest.py  test_altergo_launcher_argv.py  test_api_dispatch.py  test_dispatch_screens.py  test_main_version.py  test_menu_helpers.py  test_sessions_index.py  test_tmux_wrapping.py
src/assets/rover/packs/pack-a-relay-noir/: prompts.md
src/rover/: __init__.py  __main__.py  altergo_launcher.py  app.py  banner.py  caffeinate.py  greetings.py  menu.py  server_manager.py  session_manager.py  sessions_index.py
src/rover/screens/: activity.py  dashboard.py  detail.py  settings.py
tests/: conftest.py  test_api_dispatch.py  test_caffeinate.py  test_menu_helpers.py  test_session_manager.py  test_sessions_index.py  test_telemetry.py
