[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rover-tui"
version = "0.3.7"
description = "On-the-go session manager and agent monitor for dispatch"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["tui", "terminal", "ai", "agents", "claude", "dispatch"]
classifiers = [
    "Environment :: Console",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0",
    "pyfiglet>=1.0.1",
    "rich-pyfiglet>=0.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://rover.thepixelabs.dev"
Repository = "https://github.com/thepixelabs/dispatch"
Changelog = "https://github.com/thepixelabs/dispatch/releases"

[project.scripts]
rover = "rover.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.hatch.build]
# The top-level repo's .gitignore lists rover/ as a separately-versioned
# sub-project. Without this, hatchling's default VCS-aware file discovery
# excludes every .py file under rover/ and produces an empty wheel.
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["rover"]
